# cloud-info-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: github-ci.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
helm-charts/cloud-pricing/: Chart.yaml  values.yaml
helm-charts/cloud-pricing/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
helm-charts/cloud-pricing/templates/tests/: test-connection.yaml
src/api/: app.py  config.py  job.py
src/api/db/: docker-compose.yml  query.py  setup.py  types.py
src/api/endpoints/: events.py
src/api/scrapers/aws/: awsBulk.py
src/api/scrapers/azure/: retail.py
src/api/scrapers/gcp/: catalog.py  machine.py  machines.py
src/api/tools/: hashing.py
tests/: test_hashing.py
