[metadata]
name = cloud-pricing
version = 0.0.1
author = AlterWay R&D team
author_email = rnd@alterway.fr
description = 'Cloud Pricing API'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    flake8
    google-api-python-client
    oauth2client
    sqlalchemy
    Flask
    flask_sqlalchemy
    graphene
    APScheduler
    psycopg2
    azure-mgmt-compute
    azure-common
    azure

[options.packages.find]
where = src

[flake8]
max-complexity = 10
max-line-length = 90
ignore =
        D100
        D101
        D102
        D103
        D104
        D105
        D107
exclude =
        .git
        __pycache__
        .tox
        .eggs
        *.egg
        build
        dist
        venv